# rust-roguelike-tutorial

./: .gitignore  Cargo.toml
part-00-start/: Cargo.toml
part-00-start/src/: components.rs  gamesystem.rs  main.rs  player.rs  saveload_system.rs  spawner.rs
part-00-start/src/effects/: damage.rs  mod.rs  triggers.rs
part-00-start/src/gamelog/: builder.rs  mod.rs
part-00-start/src/gui/: cheat_menu.rs  hud.rs  (+10 more)
part-01-update/: Cargo.toml
part-01-update/raws/: spawns.json
part-01-update/src/: components.rs  main.rs  player.rs  saveload_system.rs
part-01-update/src/effects/: damage.rs  mod.rs  triggers.rs
part-01-update/src/gui/: cheat_menu.rs  drop_item_menu.rs  identify_menu.rs  inventory_menu.rs  menus.rs
part-01-update/src/map/: dungeon.rs
part-01-update/src/map_builders/: dark_elves.rs  rooms_corridors_lines.rs
part-01-update/src/raws/: rawmaster.rs
part-01-update/src/systems/: lighting_system.rs  melee_combat_system.rs  mod.rs  trigger_system.rs
part-01-update/src/systems/ai/: visible_ai_system.rs
part-01-update/src/systems/dispatcher/: mod.rs
part-01-update/src/systems/inventory_system/: identification_system.rs
part-02-sound/: Cargo.toml
part-02-sound/src/: main.rs  rex_assets.rs  saveload_system.rs
part-03-gui/: Cargo.toml
part-03-gui/raws/: spawns.json
part-03-gui/src/: damage_system.rs  main.rs  player.rs
part-04-options/: Cargo.toml
part-04-options/src/: components.rs  main.rs  player.rs  spawner.rs
part-05-stealing/: Cargo.toml
part-05-stealing/raws/: spawns.json
part-05-stealing/src/: main.rs  player.rs  rng.rs
(+110 files in other folders)
